# TinoRex

./: .gitignore  Dockerfile  README.md  _check_agents.py  amber-manifest.json5  pyproject.toml  start_all.sh  start_participant.sh
.github/workflows/: docker-build.yml  docker-publish.yml
AgentX_1215_0408_v7/: Dockerfile  README.md  amber-manifest.json5  pyproject.toml  run_test.py  solution_attempt_1.py  solution_attempt_2.py  start_all.sh  start_participant.sh  stop_all.sh
AgentX_1215_0408_v7/.claude/: settings.local.json
AgentX_1215_0408_v7/src/agents/codegen/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/critic/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/eda/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/ensemble/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/error/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/feature/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/hypertune/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/model/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/planner/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/stacking/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/agents/threshold/: agent.py  executor.py  server.py
AgentX_1215_0408_v7/src/evaluator/cache/: cache.db
AgentX_1215_0408_v7/src/orchestrator/: agent.py  executor.py  server.py
AgentX_2101_0408_v8/: Dockerfile
src/arena/: agent.py  executor.py  llm.py  server.py
(+19 files in other folders)
